<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstagramViewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="popular_photos_caption">Popular Photos</string>
    <string name="caption_default_text">This is a default caption</string>
    <string name="username">Username</string>
    <string name="Location">Location</string>
    <string name="Likes">Likes</string>
    <string name="TimeSince">Time Since</string>
    <string name="CommentUser">User that Commented</string>
    <string name="CommentText">Comment</string>

</resources>
