<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgPhoto"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:padding="10dp"
        android:layout_below="@+id/imgProfile"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_default_text"
        android:id="@+id/tvCaption"
        android:maxLines = "3"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:ellipsize="end"
        android:layout_below="@+id/imgLikeHeart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvUsername"
        android:layout_marginTop="2px"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imgProfile"
        android:layout_toEndOf="@+id/imgProfile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Location"
        android:id="@+id/tvLocation"
        android:paddingTop="15px"
        android:layout_toEndOf="@+id/imgLocation"
        android:layout_toRightOf="@+id/imgLocation"
        android:layout_below="@+id/tvUsername"
        android:layout_alignTop="@+id/imgLocation" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_margin="10px"
        android:id="@+id/imgLikeHeart"
        android:layout_below="@+id/imgPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/heart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLikeCount"
        android:layout_marginTop="8px"
        android:layout_toRightOf="@+id/imgLikeHeart"
        android:layout_below="@+id/imgPhoto"
        android:layout_above="@+id/tvCaption"
        android:text="@string/Likes"
        android:textColor="#ff517fa4" />

    <com.example.rrich.instagramviewer.RoundedImageView
        android:id="@+id/imgProfile"
        android:layout_width="40px"
        android:layout_height="40px"
        android:layout_margin="10px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="40px"
        android:layout_height="40px"
        android:id="@+id/imgLocation"
        android:layout_below="@+id/tvUsername"
        android:layout_toRightOf="@+id/imgProfile"
        android:background="@drawable/location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSince"
        android:layout_marginTop="2px"
        android:textStyle="italic"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvUsername"
        android:gravity="right"
        android:text="@string/TimeSince" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_margin="10px"
        android:id="@+id/commentLogo1"
        android:layout_below="@+id/tvCaption"
        android:layout_alignLeft="@+id/imgLikeHeart"
        android:layout_alignStart="@+id/imgLikeHeart"
        android:background="@drawable/comment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CommentText"
        android:id="@+id/tvComment1"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/commentLogo1"
        android:layout_alignLeft="@+id/commentLogo1"
        android:layout_alignStart="@+id/commentLogo1"
        android:layout_alignRight="@+id/tvSince"
        android:layout_alignEnd="@+id/tvSince"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CommentUser"
        android:id="@+id/tvCommentUser1"
        android:layout_above="@+id/tvComment1"
        android:layout_toRightOf="@+id/commentLogo1"
        android:layout_toEndOf="@+id/commentLogo1"
        android:textColor="#ff517fa4" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/commentLogo2"
        android:layout_below="@+id/tvComment1"
        android:maxLines = "3"
        android:ellipsize="end"
        android:layout_alignLeft="@+id/commentLogo1"
        android:layout_alignStart="@+id/commentLogo1"
        android:background="@drawable/comment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CommentText"
        android:id="@+id/tvComment2"
        android:maxLines = "3"
        android:ellipsize="end"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/commentLogo2"
        android:layout_alignLeft="@+id/commentLogo2"
        android:layout_alignStart="@+id/commentLogo2"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CommentUser"
        android:id="@+id/tvCommentUser2"
        android:layout_below="@+id/tvComment1"
        android:layout_alignLeft="@+id/tvCommentUser1"
        android:layout_alignStart="@+id/tvCommentUser1"
        android:textColor="#ff517fa4" />
</RelativeLayout>